# tft-bot

./: .gitignore  Cargo.toml  README.md  package.json
.github/workflows/: ci.yml
apps/agent-cli/: Cargo.toml
apps/agent-cli/src/: main.rs  onnx_infer.rs  run_afk.rs  run_match.rs
apps/executor-probe/: Cargo.toml
apps/executor-probe/src/: main.rs
apps/lcu-probe/: Cargo.toml
apps/lcu-probe/src/: main.rs
apps/queue-helper/: Cargo.toml
apps/queue-helper/src/: main.rs
apps/runtime-observe/: Cargo.toml
apps/runtime-observe/src/: main.rs
configs/: augment-reference-s16.ts  layouts.cn.yaml  ocr-corrections.json  patch-pack.txt  s16-patch-pack.json  s17-augment-lexicon.json  s17-patch-pack.json  window_profiles.cn.yaml
configs/strategy-templates/: baseline.json  fast8.json  fast9.json  slowroll.json  tempo.json
crates/tft-domain/: Cargo.toml
crates/tft-domain/src/: lib.rs  runtime_config.rs
crates/tft-env/: Cargo.toml
crates/tft-env/src/: lib.rs  real_env.rs  redline.rs  sim_env.rs
crates/tft-eval/: Cargo.toml
crates/tft-eval/src/: lib.rs
crates/tft-executor/: Cargo.toml
crates/tft-executor/src/: backend.rs  capture.rs  correction.rs  input.rs  input_win.rs  lcu_gate.rs  lib.rs  noise.rs  ocr.rs  ocr_winrt.rs  phase.rs  shop.rs  verify.rs  window.rs  window_validation.rs
crates/tft-executor/src/win/: mod.rs  window_discovery.rs
crates/tft-meta/: Cargo.toml
crates/tft-meta/src/: config.rs  fsm.rs  ingame_api.rs  lcu_client.rs  lib.rs  lobby.rs  ready_check.rs  rule_shop.rs
crates/tft-sim/: Cargo.toml
crates/tft-sim/src/: lib.rs
crates/tft-strategy/: Cargo.toml
crates/tft-strategy/src/: lib.rs
docs/: ARCHITECTURE.md  CLAUDE_CODE_BRAIN_ARCHITECTURE.md  COMPLETION.md  HERMES_AGENT_CAPABILITIES.md  HERMES_BRAIN_ARCHITECTURE.md  HERMES_CAPABILITIES.md  HERMES_vs_CLAUDE_CODE.md  LCU_CN.md  MIGRATION_FROM_TFT.md  REAL_MACHINE_SOP.md  REFERENCES.md  REWARD.md  ROADMAP.md  STUBS_AND_M2_M4.md
python/: requirements.txt
python/tests/: test_env_contract.py
python/tft_bot_rl/: env_client.py  eval_baselines.py  export_onnx.py  finetune_real.py  train_ppo.py  train_ppo_curriculum.py
scripts/: extract_lcu_auth.py  get-lcu-token.cmd  get-lcu-token.ps1  get_lcu_token.py  with-msvc.cmd
