[package]
name = "agent-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agent-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
ort = "2.0.0-rc.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tft-domain = { path = "../../crates/tft-domain" }
tft-env = { path = "../../crates/tft-env" }
tft-executor = { path = "../../crates/tft-executor" }
