[package]
name = "executor-probe"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde_json = "1.0"
tft-domain = { path = "../../crates/tft-domain" }
tft-executor = { path = "../../crates/tft-executor" }

[features]
default = []
win_window = ["tft-executor/win_window"]
ocr_winrt = ["tft-executor/ocr_winrt"]
input_sim = ["tft-executor/input_sim"]
# All real-machine features
real = ["win_window", "ocr_winrt", "input_sim"]

[[bin]]
name = "executor-probe"
path = "src/main.rs"
