[package]
name = "lcu-probe"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lcu-probe"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
