[[bin]]
name = "runtime-observe"
path = "src/main.rs"

[package]
name = "runtime-observe"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tft-domain = { path = "../../crates/tft-domain" }
tft-executor = { path = "../../crates/tft-executor" }
