[package]
name = "tft-env"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tft-domain = { path = "../tft-domain" }
tft-executor = { path = "../tft-executor" }
tft-sim = { path = "../tft-sim" }
tft-strategy = { path = "../tft-strategy" }
