[package]
name = "tft-executor"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
screenshots = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tft-domain = { path = "../tft-domain" }

[features]
default = []
ocr_winrt = []  # Enable WinRT OCR (requires windows crate)
input_sim = []  # Enable input simulation (requires windows crate)
