[package]
name = "tft-executor"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
regex-lite = "0.1"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
screenshots = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tft-domain = { path = "../tft-domain" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", optional = true }

[features]
default = []
win_window = [
    "dep:windows",
    "windows/Win32_Foundation",
    "windows/Win32_UI_WindowsAndMessaging",
    "windows/Win32_Graphics_Gdi",
    "windows/Win32_UI_HiDpi",
    "windows/Win32_System_Threading",
    "windows/Win32_System_ProcessStatus",
]
ocr_winrt = [
    "dep:windows",
    "windows/Foundation",
    "windows/Foundation_Collections",
    "windows/Globalization",
    "windows/Graphics_Imaging",
    "windows/Media_Ocr",
    "windows/Storage_Streams",
    "windows/Win32_System_Com",
    "windows/Win32_System_WinRT",
]
input_sim = [
    "dep:windows",
    "windows/Win32_Foundation",
    "windows/Win32_UI_WindowsAndMessaging",
    "windows/Win32_UI_Input_KeyboardAndMouse",
]
